# json2capella

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html
.github/: dependabot.yml
.github/workflows/: build-test-publish.yml  commit-check.yml  docs.yml
_sources/code/: json2capella.rst.txt  modules.rst.txt
code/: json2capella.html  modules.html
docs/source/: conf.py
json2capella/: datatypes.py  export.py  importer.py
